# profile

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_ETHICS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md  _typos.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  deploy.yml  scorecard.yml  security-scan.yml
apps/api/: Cargo.toml  build.rs  package.json
apps/api/benches/: render.rs
apps/api/src/: error.rs  httpsec.rs  lib.rs  main.rs  prelude.rs  security.rs  telemetry.rs  wkd_key.pgp
apps/api/src/content/: README.md  mod.rs
apps/api/src/routes/: fallback.rs  feeds.rs  health.rs  meta.rs  mod.rs  pages.rs  static_files.rs
apps/api/src/templates/: layout.rs  mod.rs  nav.rs  pages.rs
apps/api/static/: styles.css
apps/api/static/fonts/: NOTICE.md  OFL.txt
apps/api/styles/: input.css
apps/api/tests/: http.rs
crates/lib-core/: Cargo.toml
crates/lib-core/src/: lib.rs
scripts/: check-all.sh  smoke.sh
tests/e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
tests/e2e/specs/: a11y.spec.ts  interactions.spec.ts  smoke.spec.ts
